--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>myz-zonemap</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but myz-zonemap doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<meta name="author" content="Stefouch">
+<link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+<!-- FontAwesome CSS -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+<!-- Favicon -->
+<!-- For IE 9 and below. ICO should be 32x32 pixels in size -->
+<!--[if IE]><link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico"><![endif]-->
+<meta name="msapplication-square310x310logo" content="./images/myz-d6.png">
+<link rel="icon" type="image/x-icon" href="<%= BASE_URL %>favicon.ico">
+<!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. --> 
+<link rel="apple-touch-icon" href="./images/myz-d6.png">
+<link rel="apple-touch-icon-precomposed" href="./images/myz-d6.png">
+<meta name="apple-mobile-web-app-title" content="MYZ Zone Map">
+<!-- Firefox, Chrome, Safari, IE 11+ and Opera. 192x192 pixels in size. -->
+<link rel="icon" sizes="192x192" href="./images/myz-d6.png">
+
+<!-- Theme color for Chrome, Firefox OS and Opera -->
+<meta name="theme-color" content="#281225">
+
+<title>Find My Path</title>
+
+</head>
+<body>
+
+<noscript>
+	<strong>We're sorry but Find My Path doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+
+<div id="app"></div>
+<!-- built files will be auto injected -->
+
+</body>
 </html>
