Link core stylesheets

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 <!-- FontAwesome CSS -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
+<!-- Personal Stylesheets -->
+<link rel="stylesheet" href="./styles/core.css">
+<link rel="stylesheet" href="./styles/zonemap.css">
+
 <!-- Favicon -->
 <!-- For IE 9 and below. ICO should be 32x32 pixels in size -->
 <!--[if IE]><link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico"><![endif]-->
