--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 <!-- Personal Stylesheets -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+<link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
 <link rel="stylesheet" href="./styles/core.css">
 <link rel="stylesheet" href="./styles/zonemap.css">
 
