--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,9 @@
 <meta name="author" content="Stefouch">
 <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
-<!-- FontAwesome CSS -->
-<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"> -->
-
 <!-- Personal Stylesheets -->
-<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"> -->
-<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons"> -->
-<!-- <link rel="stylesheet" href="https://cdn.materialdesignicons.com/3.5.95/css/materialdesignicons.min.css"> -->
-<link rel="stylesheet" href="./styles/core.css">
-<link rel="stylesheet" href="./styles/zonemap.css">
+<link rel="stylesheet" href="./css/core.css">
+<link rel="stylesheet" href="./css/zonemap.css">
 
 <!-- Favicon -->
 <!-- For IE 9 and below. ICO should be 32x32 pixels in size -->
