MDI: use of CDN instead of local import
To gain ~4MB space.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
 <meta name="author" content="Stefouch">
 <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
+<!-- Material Design Icons -->
+<link rel="stylesheet" href="https://cdn.materialdesignicons.com/3.5.95/css/materialdesignicons.min.css">
+
 <!-- Personal Stylesheets -->
 <link rel="stylesheet" href="./css/core.css">
 <link rel="stylesheet" href="./css/zonemap.css">
