--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,14 @@
 <!-- Favicon -->
 <!-- For IE 9 and below. ICO should be 32x32 pixels in size -->
 <!--[if IE]><link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico"><![endif]-->
-<meta name="msapplication-square310x310logo" content="./images/myz-d6.png">
+<meta name="msapplication-square310x310logo" content="./img/logo.png">
 <link rel="icon" type="image/x-icon" href="<%= BASE_URL %>favicon.ico">
 <!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. --> 
-<link rel="apple-touch-icon" href="./images/myz-d6.png">
-<link rel="apple-touch-icon-precomposed" href="./images/myz-d6.png">
+<link rel="apple-touch-icon" href="./img/logo.png">
+<link rel="apple-touch-icon-precomposed" href="./img/logo.png">
 <meta name="apple-mobile-web-app-title" content="MYZ Zone Map">
 <!-- Firefox, Chrome, Safari, IE 11+ and Opera. 192x192 pixels in size. -->
-<link rel="icon" sizes="192x192" href="./images/myz-d6.png">
+<link rel="icon" sizes="192x192" href="./img/logo.png">
 
 <!-- Theme color for Chrome, Firefox OS and Opera -->
 <meta name="theme-color" content="#281225">
